--- a/2024/meson.build
+++ b/2024/meson.build
@@ -7,6 +7,7 @@ executable(
     sources: [
         'src/util.cpp',
         'src/01/1.cpp',
+        'src/01/2.cpp',
         'src/02/1.cpp',
     ],
 
