--- a/2024/meson.build
+++ b/2024/meson.build
@@ -11,6 +11,7 @@ executable(
         'src/02/1.cpp',
         'src/02/2.cpp',
         'src/03/1.cpp',
+        'src/03/2.cpp',
     ],
 
     # compiler arguments (assuming gcc)
