--- a/2024/meson.build
+++ b/2024/meson.build
@@ -12,6 +12,7 @@ executable(
         'src/02/2.cpp',
         'src/03/1.cpp',
         'src/03/2.cpp',
+        'src/04/1.cpp',
     ],
 
     # compiler arguments (assuming gcc)
