--- a/2024/meson.build
+++ b/2024/meson.build
@@ -13,6 +13,7 @@ executable(
         'src/03/1.cpp',
         'src/03/2.cpp',
         'src/04/1.cpp',
+        'src/04/2.cpp',
     ],
 
     # compiler arguments (assuming gcc)
