--- a/2024/meson.build
+++ b/2024/meson.build
@@ -15,6 +15,7 @@ executable(
         'src/04/1.cpp',
         'src/04/2.cpp',
         'src/05/1.cpp',
+        'src/05/2.cpp',
     ],
 
     # compiler arguments (assuming gcc)
