--- a/2024/meson.build
+++ b/2024/meson.build
@@ -16,6 +16,7 @@ executable(
         'src/04/2.cpp',
         'src/05/1.cpp',
         'src/05/2.cpp',
+        'src/06/1.cpp',
     ],
 
     # compiler arguments (assuming gcc)
