--- a/2024/meson.build
+++ b/2024/meson.build
@@ -17,6 +17,7 @@ executable(
         'src/05/1.cpp',
         'src/05/2.cpp',
         'src/06/1.cpp',
+        'src/06/2.cpp',
     ],
 
     # compiler arguments (assuming gcc)
