--- a/2024/meson.build
+++ b/2024/meson.build
@@ -19,6 +19,7 @@ executable(
         'src/06/1.cpp',
         'src/06/2.cpp',
         'src/07/1.cpp',
+        'src/07/2.cpp',
     ],
 
     # compiler arguments (assuming gcc)
