--- a/2024/meson.build
+++ b/2024/meson.build
@@ -21,6 +21,7 @@ executable(
         'src/07/1.cpp',
         'src/07/2.cpp',
         'src/08/1.cpp',
+        'src/08/2.cpp',
     ],
 
     # compiler arguments (assuming gcc)
