--- a/2024/meson.build
+++ b/2024/meson.build
@@ -25,6 +25,7 @@ executable(
         'src/09/1.cpp',
         'src/09/2.cpp',
         'src/10/1.cpp',
+        'src/10/2.cpp',
     ],
 
     # compiler arguments (assuming gcc)
