refactor: project structure

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,22 +1,10 @@
-[package]
-name = "advent_of_code"
-edition = "2024"
+[workspace]
+resolver = "3"
+members = [
+    "solutions", # main code
+    "util", # lib
+    "proc_lib", # proc-macro lib
+]
 
-[dependencies]
-regex = "1.12.2"
-image = "0.25.8"
-rayon = "1.11.0"
-num_enum = "0.7.5"
-dhat = "0.3.3" # heap profiling
-quote = "1.0.41" # for proc macros
-syn = "2.0.108" # for proc macros
-petgraph = { version = "0.8.3", features = ["rayon"] }
-
-[lib]
-proc-macro = true
-
-# for heap profiling with dhat-rs
-[features]
-dhat-heap = []
 [profile.release]
 debug = 1
